infra/k8s-dev/chat/ingress-svc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  namespace: go-skaffold
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: $1
spec:
  rules:
    - http:
        paths:
          - path: /go-skaffold(.*)
            pathType: Prefix
            backend:
              service:
                name: sample-svc
                port:
                  number: 5000
